feat: tapestry.experimental.with-scope
Take a shot at implementing something similar to Java's structured scope
API natively in tapestry.